<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:layout_marginStart="5dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginEnd="5dp"
    app:cardElevation="5dp"
    app:cardCornerRadius="10dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/main_profilePic"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_user_pic"
            android:layout_marginLeft="8dp" />

        <TextView
            android:id="@+id/main_profileName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="3dp"
            android:padding="5dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toStartOf="@+id/mainBookmarkBtn"
            app:layout_constraintStart_toEndOf="@+id/main_profilePic"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Shudipto Trafder" />

        <TextView
            android:id="@+id/main_postDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="0dp"
            android:paddingEnd="5dp"
            android:paddingLeft="5dp"
            android:paddingStart="5dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            app:layout_constraintEnd_toStartOf="@+id/mainBookmarkBtn"
            app:layout_constraintStart_toEndOf="@+id/main_profilePic"
            app:layout_constraintTop_toBottomOf="@+id/main_profileName"
            tools:text="07 may 2017" />

        <ImageView
            android:id="@+id/mainBookmarkBtn"
            android:layout_width="32dp"
            android:layout_height="42dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/main_postDate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_bookmark" />

        <ImageView
            android:id="@+id/main_post_img"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_profilePic"
            app:srcCompat="@drawable/ic_user_pic" />

        <TextView
            android:id="@+id/main_post_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/dummy_post"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.551"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_post_img" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:orientation="horizontal"
            android:padding="5dp"
            android:weightSum="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_post_text">

            <!--//fixme 12/10/2017 add red color -->

            <TextView
                android:id="@+id/main_post_love_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                tools:text="225 love" />

            <TextView
                android:id="@+id/main_post_share_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                tools:text="20 share" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="1dp"
            android:weightSum="3"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="5dp"
            app:layout_goneMarginEnd="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="0dp"
                android:layout_weight=".5"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_like" />

            <TextView
                android:id="@+id/main_post_love_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/loveTxt" />

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight=".5"
                app:srcCompat="@drawable/ic_share" />

            <TextView
                android:id="@+id/main_post_share_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/shareTxt" />
        </LinearLayout>

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>